- Fixed mobile table overflow

--- a/InvoiceWebApp/src/app/components/debtor/debtor.component.scss
+++ b/InvoiceWebApp/src/app/components/debtor/debtor.component.scss
@@ -115,9 +115,8 @@
         border: none;
         border-bottom: 1px solid #eee;
         position: relative;
-        padding-left: 50% !important;
         white-space: normal;
-        text-align: left;
+        text-align: right;
     }
 
     .table td:before {
