--- a/InvoiceWebApp/src/app/components/user/user.component.scss
+++ b/InvoiceWebApp/src/app/components/user/user.component.scss
@@ -102,9 +102,8 @@
         border: none;
         border-bottom: 1px solid #eee;
         position: relative;
-        padding-left: 50% !important;
         white-space: normal;
-        text-align: left;
+        text-align: right;
     }
 
     .table td:before {
